--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3005",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,7 +14,9 @@
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
     "keen-slider": "^6.8.5",
+    "ldapjs": "^3.0.2",
     "next": "12.2.5",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
